logs/Slang/chapter-7/structures/packed/default-value.sv.log
name: packed-structures-default-members-value
description: Test packed structures default value support
should_fail: 1
tags: 7.2.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/structures/packed/default-value.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/structures/packed/default-value.sv:16:15: error: packed members can not have initializers
	bit [3:0] lo = c;
	             ^ ~
